# Plansz-wkowy-player

./: Planszówkowy-player.md  README.md
esp32-code/: Cargo.toml
esprs/: .gitignore  Cargo.toml
esprs/src/: button.rs  connecting.html  http_server.rs  main.rs  main.rs.example  password_input.html  playlist_select.html
